# nmonit

./: .dockerignore  .gitignore  .golangci.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
agent/: Cargo.toml  build.rs
agent/src/: discovery.rs  executor.rs  gpu.rs  heartbeat.rs  main.rs  memory.rs  metrics.rs  network.rs  resources.rs
cli/: go.mod
config/: nmonit.yaml
control-plane/: control-plane  go.mod  go.sum
control-plane/cmd/control-plane/: interceptor_test.go  main.go  main_test.go
control-plane/internal/agent/: agent.go  agent_test.go  helpers_test.go
control-plane/internal/metrics/: metrics.go
control-plane/internal/registry/: registry.go  registry_test.go
control-plane/internal/restapi/: restapi.go  restapi_test.go
control-plane/internal/tlsreload/: reloader.go
control-plane/internal/validator/: validator.go
dashboard/: README.md
deploy/certs/: agent.crt  agent.key  ca.crt  ca.key  ca.srl  server.crt  server.key
deploy/docker/: Dockerfile.agent  Dockerfile.cli  Dockerfile.control-plane
deploy/grafana/: nmonit-dashboard.json
deploy/grafana/dashboards/: nmonit.yml
deploy/grafana/datasources/: prometheus.yml
deploy/prometheus/: prometheus.yml
deploy/systemd/: compute-agent.service  compute-control-plane.service
network/: Cargo.toml
proto/: buf.gen.yaml  buf.yaml
proto/compute/v1/: agent.proto  control.proto  job.proto  memory.proto  resource.proto  storage.proto
scripts/: check-dead-symbols.sh  dead-symbols.json  gen-certs.sh  install.sh  start-cluster.sh
sdk/c/: README.md
sdk/go/: README.md
sdk/python/: README.md
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
src/: cli.rs  config.rs  main.rs
src/api/: mod.rs  routes.rs  tasks.rs  ws.rs
src/common/: types.rs
src/host/: litellm.rs  mod.rs  models.rs  scheduler.rs  server.rs  workers.rs
src/worker/: client.rs  resources.rs
storage/: Cargo.toml
systemd/: nmonit-host.service  nmonit-worker.service
