[package]
name = "nmonit"
version = "0.1.0"
edition = "2021"
description = "Distributed LLM Compute Cluster - Share GPU/CPU/RAM/VRAM across devices"
authors = ["nmonit"]
license = "MIT"

[[bin]]
name = "nmonit"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = ">=4.0, <4.5", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
sysinfo = "=0.29.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
futures = "0.3"
dashmap = "5"
pin-project = "1"
humantime = "2"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2"
async-stream = "0.3"
