[package]
name = "compute-agent"
version = "0.1.0"
edition = "2021"
description = "Distributed compute fabric node agent"

[[bin]]
name = "compute-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
tower = { version = "0.5", features = ["limit", "retry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nvml-wrapper = "0.10"
sysinfo = "0.32"
nix = { version = "0.29", features = ["fs", "sched"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
metrics = "0.24"
metrics-exporter-prometheus = "0.15"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "v7"] }
hostname = "0.4"
libc = "0.2"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
