[package]
name = "compute-agent"
version = "0.1.0"
edition = "2024"
description = "Distributed compute fabric node agent"

[[bin]]
name = "compute-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["tls-native-roots"] }
tonic-prost = "0.14"
prost = "0.14"
nvml-wrapper = "0.12"
sysinfo = "0.39"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
anyhow = "1"
hostname = "0.4"
libc = "0.2"

[build-dependencies]
tonic-prost-build = "0.14"
